<resources>
    <string name="app_name">SmartParking</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_context">Context</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="input">___________________________________</string>
    <string name="remember_me">Remember Me</string>
    <string name="project_by_nisit_palanan">Project By Nisit Palanan</string>
    <string name="searching">Search Parking</string>
    <string name="username">Username:</string>
    <string name="number_car">Number Car:</string>
    <string name="email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>


</resources>
