<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.user.smartparking.MainActivity">


    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/logoparking" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="10sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/userName"
            android:text="@string/number_car"
            android:textSize="10sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/carNumber"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:textSize="15dp" />


        <LinearLayout
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/carNumber"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remember_me"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:background="@color/resistor"
                    android:onClick="onclicktoAuth"
                    android:layout_marginRight="5dp"
                    android:text="@string/Register"
                    android:textStyle="bold" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@color/login"
                android:onClick="onclickMaps"
                android:text="@string/login"
                android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:layout_marginTop="19dp"
            android:gravity="center_horizontal"
            android:text="@string/project_by_nisit_palanan"
            android:textSize="10sp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>
