<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.user.smartparking.AuthActivity">


    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/logoparking" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="10sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/userName"
            android:text="@string/number_car"
            android:textSize="10sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userCarNumber"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:textSize="15dp" />




        <LinearLayout
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userCarNumber"
            >

                <Button
                    android:id="@+id/btnSubmitRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:background="@color/login"
                    android:onClick="onclicktologin"
                    android:text="@string/Register"
                    android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>